Fix cropping previews on small screens

--- a/css/home.css
+++ b/css/home.css
@@ -81,7 +81,7 @@ h1, .download-buttons {
     100% { opacity: 1; }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1100px) {
     .column {
         height: 100vh;
         display: inline-flex;
